--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-intersection-observer": "^10.0.0",
     "react-joyride": "^2.9.3",
     "react-markdown": "^10.1.0",
+    "react-otp-input": "^3.1.1",
     "react-redux": "^9.0.4",
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
